@@ -4,10 +4,10 @@ Installing
 `Text::FindLinks` is a Perl module for automatic URL markup and extraction. To
 install:
 
-    $ perl Makefile.PL
-    $ make
-    $ make test
-    $ make install
+    $ perl Build.PL
+    $ ./Build
+    $ ./Build test
+    $ ./Build install
 
 After installing, you can find documentation for this module with the
 perldoc command: `perldoc Text::FindLinks`.
